# alloy

./: .dockerignore  .env.example  .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  ALLOY_LOGIC_REVIEW.md  CLAUDE.md  Dockerfile  README.md  bunfig.toml  compose.dev.yml  compose.yaml  deno-globals.d.ts  deno.json  deno.server.json  devenv.nix  devenv.yaml  docker-compose.dev.yml  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  tsconfig.base.json  tsconfig.json  turbo.json
.aislop/: globals.d.ts
.github/: CONTRIBUTING.md  RELEASING.md  SECURITY.md  dependabot.yml  pull-request-template.md  pull_request_template.md  release.yml
apps/desktop/sidecar/: Cargo.toml
apps/desktop/sidecar/src/: main.rs  sidecar_obs.rs  sidecar_recorder.rs  sidecar_recorder_cache.rs  sidecar_recorder_output.rs  sidecar_runtime.rs  sidecar_runtime_recording.rs  sidecar_runtime_tests.rs  sidecar_runtime_windows_audio.rs  sidecar_runtime_windows_detection.rs  sidecar_types.rs
docker/: Dockerfile  Dockerfile.aio  aio-entrypoint.sh
machine-learning/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
machine-learning/alloy_ml/: __init__.py  __main__.py  config.py  gunicorn_conf.py  log_conf.json  main.py  schemas.py
machine-learning/alloy_ml/models/: __init__.py  clip_cnn.py  errors.py  game_classifier.py  game_classifier_helpers.py  registry.py
machine-learning/scripts/: healthcheck.py
nix/: docker.nix  machine-learning.nix  module.nix  package.nix  pnpm.nix  source.nix
public/: desktop-theme-init.js
scripts/: db.mjs  dev-env.mjs  dev-io.ts  dev-lock.ts  dev-ml.sh  dev-postgres.sh  dev-preflight.ts  dev-process.ts  dev-server.sh  dev.mjs  dev.ts  docker-entrypoint.sh  measure-desktop-library-scan.mjs  prune-server-node-modules.mjs  update-release-package-versions.mjs  verify-release-version-change.mjs  with-dev-env.mjs  write-release-notes.cjs
(+606 files in other folders)
