[project]
name = "alloy-ml"
version = "0.0.0"
description = "Alloy machine learning inference service"
requires-python = ">=3.11,<4.0"
readme = "README.md"
dependencies = [
  "fastapi>=0.115.0,<1.0",
  "gunicorn>=21.1.0,<24.0",
  "huggingface-hub>=1.0.0,<2.0",
  "numpy>=2.1.0,<3.0",
  "orjson>=3.10.0,<4.0",
  "pillow>=11.0.0,<13.0",
  "pydantic>=2.10.0,<3.0",
  "pydantic-settings>=2.5.0,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "rich>=13.9.0,<15.0",
  "uvicorn[standard]>=0.30.0,<1.0",
]

[project.optional-dependencies]
cpu = ["torch>=2.5.0", "torchvision>=0.20.0"]

[project.scripts]
alloy-machine-learning = "alloy_ml.__main__:main"

[tool.uv]
compile-bytecode = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.hatch.build.targets.sdist]
include = ["alloy_ml"]

[tool.hatch.build.targets.wheel]
include = ["alloy_ml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
